Added websocket server

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "url": "housepart-music-server"
   },
   "author": "Ruben Brugman",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "websocket": "^1.0.32"
+  }
 }
