--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Ruben Brugman",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "spotify-web-api-node": "^5.0.0"
   }
 }
