--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ruben Brugman",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
